2005-08-17  Billy Biggs  <vektor@dumbterm.net>

	* src/pixman-remap.h: Only mangle exported symbols.  This is
	sufficient and makes debugging a lot easier.

2005-08-16  Billy Biggs  <vektor@dumbterm.net>

	* src/Makefile.am: Fix a typo in the last commit.

2005-08-16  Billy Biggs  <vektor@dumbterm.net>

	* src/Makefile.am: Split the MMX code into a separate libtool
	library to avoid applying the MMX CFLAGS to all of the pixman
	code.  Idea and code from Owen Taylor.

	* src/pixman-remap.h: Update the mangling header file to include
	the MMX symbols.

2005-08-16  Billy Biggs  <vektor@dumbterm.net>

	* src/fbmmx.c: (shift), (negate), (pix_multiply), (pix_add),
	(expand_alpha), (expand_alpha_rev), (invert_colors), (over),
	(over_rev_non_pre), (in), (in_over), (load8888), (pack8888),
	(store8888), (expand565), (expand8888), (pack565), (pix_add_mul),
	(mmxCombineMaskU), (mmxCombineOverU), (mmxCombineOverReverseU),
	(mmxCombineInU), (mmxCombineInReverseU), (mmxCombineOutU),
	(mmxCombineOutReverseU), (mmxCombineAtopU),
	(mmxCombineAtopReverseU), (mmxCombineXorU), (mmxCombineAddU),
	(mmxCombineSaturateU), (mmxCombineSrcC), (mmxCombineOverC),
	(mmxCombineOverReverseC), (mmxCombineInC), (mmxCombineInReverseC),
	(mmxCombineOutC), (mmxCombineOutReverseC), (mmxCombineAtopC),
	(mmxCombineAtopReverseC), (mmxCombineXorC), (mmxCombineAddC),
	(fbComposeSetupMMX), (fbCompositeSolid_nx8888mmx),
	(fbCompositeSolid_nx0565mmx),
	(fbCompositeSolidMask_nx8888x8888Cmmx),
	(fbCompositeSrc_8888x8x8888mmx), (fbCompositeSrc_x888x8x8888mmx),
	(fbCompositeSolidMask_nx8x8888mmx),
	(fbCompositeSolidMaskSrc_nx8x8888mmx),
	(fbCompositeSolidMask_nx8x0565mmx),
	(fbCompositeSrc_8888RevNPx0565mmx),
	(fbCompositeSrc_8888RevNPx8888mmx),
	(fbCompositeSolidMask_nx8888x0565Cmmx),
	(fbCompositeSrcAdd_8000x8000mmx), (fbCompositeSrcAdd_8888x8888mmx),
	(fbSolidFillmmx), (fbCopyAreammx), (fbCompositeCopyAreammx),
	(detectCPUFeatures), (fbHaveMMX):
	* src/fbmmx.h: Port MMX code from xserver to pixman.
